Squashing TGR-1123: fix Rbellogs flood browser window with highlight js warnings

--- a/tiger-proxy/src/main/resources/rbel.css
+++ b/tiger-proxy/src/main/resources/rbel.css
@@ -2,12 +2,6 @@
  * ${GEMATIK_COPYRIGHT_STATEMENT}
  */
 
-@media screen and (min-width: 1408px) {
-    .container:not(.is-max-desktop):not(.is-max-widescreen) {
-        max-width: 100% !important;
-    }
-}
-
 .sidebar {
     overflow-x: hidden;
     overflow-y: auto;
